Fix image sizing on mobile

--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ h1,h2,h3 {
 
 img {
 	/* Resize images */
-	max-width: 72ch;
+	max-width: 100%;
 }
 
 pre,code {
